--- a/ListaVacantes.html
+++ b/ListaVacantes.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lista de Vacantes</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./CSS/bootstrap.min.css">
+  <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
+
 <body>
+
+
   <header class="bg-primary">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="img/SEEKUTM.png" alt="Logo" class="header-logo">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -38,7 +43,8 @@
           </form>
           <ul class="navbar-nav ms-3">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Cuenta
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -46,7 +52,9 @@
                 <li><a class="dropdown-item" href="Registrarse.html">Registrarse</a></li>
                 <li><a class="dropdown-item" href="PerfilEstudiante.html">Perfil Estudiante</a></li>
                 <li><a class="dropdown-item" href="PerfilEmpresa.html">Perfil Empresa</a></li>
-                <li><hr class="dropdown-divider"></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
                 <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
               </ul>
             </li>
@@ -55,32 +63,30 @@
       </div>
     </nav>
   </header>
-<!--M: Modifique el codigo para añadir el sistema de filtros, y funciona exitosamente-->
 
-   <!-- Contenedor Principal -->
+  <!--M: Modifique el codigo para añadir el sistema de filtros, y funciona exitosamente-->
+
+  <!-- Contenedor Principal -->
   <div class="container my-4">
     <!-- Filtros -->
-    <div class="col-12 mb-3">
-      <label for="sectorFilter" class="form-label">Filtrar por Sector:</label>
-      <select id="sectorFilter" class="form-select">
-        <option value="">Todos los Sectores</option>
-        <option value="Tecnología">Tecnología</option>
-        <option value="Salud">Salud</option>
-        <option value="Educación">Educación</option>
-        <option value="Finanzas">Finanzas</option>
-      </select>
+    <div class="col-12 mb-3" class="container">
+      <h1>Busqueda de Vacantes</h1>
+      <div class="filters">
+        <h3>Filtros</h3>
+        <label for="empresaFilter" class="form-label">Empresa:</label>
+        <select id="empresaFilter"></select>
 
-      <label for="programFilter" class="form-label mt-2">Filtrar por Programa Educativo:</label>
-      <select id="programFilter" class="form-select">
-        <option value="">Todos los Programas</option>
-        <option value="BIO">BIO</option>
-        <option value="DMI">DMI</option>
-        <option value="ERV">ERV</option>
-        <option value="GST">GST</option>
-        <option value="MAI">MAI</option>
-        <option value="MECA">MECA</option>
-        <option value="TIC">TIC</option>
-      </select>
+        <label for="localidadFilter" class="form-label">Localidad:</label>
+        <select id="localidadFilter"></select>
+
+        <label for="sectorFilter" class="form-label">Sector:</label>
+        <select id="sectorFilter"></select>
+
+        <label for="programaFilter" class="form-label">Programa:</label>
+        <select id="programaFilter"></select>
+
+        <button id="applyFilters">Aplicar Filtros</button>
+      </div>
     </div>
 
     <!-- División principal -->
@@ -132,7 +138,6 @@
     </div>
   </div>
 
-
   <footer class="text-center py-4">
     <div class="footer-links mb-3">
       <a href="#">Términos de Uso</a>
@@ -140,15 +145,23 @@
       <a href="#">Accesibilidad</a>
     </div>
     <div class="social-icons">
-      <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="img/Instagram.png" alt="Twitter"></a>
-      <a href="#"><img src="img/Tiktok.png" alt="Instagram"></a>
+      <a href="https://www.facebook.com/profile.php?id=61568639747937">
+        <img src="IMG/facebook.png" alt="Facebook">
+      </a>
+      <a href="https://www.instagram.com/seekerutm?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
+        <img src="IMG/Instagram.png" alt="Twitter">
+      </a>
+      <a href="#">
+        <img src="IMG/Tiktok.png" alt="Instagram">
+      </a>
     </div>
-    <p>&copy; 2024 SEEKERUTM. Todos los derechos reservados.</p>
+    <p>&copy; 2024 Plataforma Estadías. Todos los derechos reservados.</p>
   </footer>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="vacantes.js"></script>
+
+  <script src="./JS/bootstrap.bundle.min.js"></script>
+  <script src="./JS/scriptRegistro.js"></script>
 </body>
+
 </html>
