--- a/InicioSesion.html
+++ b/InicioSesion.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iniciar Sesión</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Enlace al icono para la pagina -->
+  <link rel="icon" href="IMG/SEEKUTM.svg" type="img/svg+xml">
+
+  <!-- Enlaces de CSS -->
+  <link rel="stylesheet" href="./CSS/bootstrap.min.css">
+  <link rel="stylesheet" href="./CSS/Styles.css">
+
 </head>
+
 <body>
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
         <h1 class="text-center mb-4">Iniciar Sesión</h1>
-        <form id="loginForm" action="login.php" method="POST">
+        <form id="loginForm" action="./PHP/login.php" method="POST">
           <div class="mb-3">
             <label for="email" class="form-label">Correo Electrónico:</label>
             <input type="email" id="email" name="email" class="form-control" required>
@@ -27,12 +36,13 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./JS/bootstrap.bundle.min.js"></script>
   <script>/*
-    document.getElementById('loginForm').addEventListener('submit', function(event) {
-      event.preventDefault();
-      alert('Inicio de sesión exitoso. (Aquí podrías verificar credenciales con el backend)');
-    });*/
+document.getElementById('loginForm').addEventListener('submit', function(event) {
+event.preventDefault();
+alert('Inicio de sesión exitoso. (Aquí podrías verificar credenciales con el backend)');
+});*/
   </script>
 </body>
+
 </html>
