--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1,78 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nosotros</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./CSS/bootstrap.min.css">
+  <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
-<body>
 
-    <header class="bg-primary">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <img src="img/SEEKUTM.png" alt="Logo" class="header-logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" href="index.html">Inicio</a>
+<body>
+  <header class="bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="img/SEEKUTM.png" alt="Logo" class="header-logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Contactanos.html">Contactanos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ListaVacantes.html">Vacantes</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
+          <ul class="navbar-nav ms-3">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Cuenta
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="InicioSesion.html">Iniciar Sesión</a></li>
+                <li><a class="dropdown-item" href="Registrarse.html">Registrarse</a></li>
+                <li><a class="dropdown-item" href="PerfilEstudiante.html">Perfil Estudiante</a></li>
+                <li><a class="dropdown-item" href="PerfilEmpresa.html">Perfil Empresa</a></li>
+                <li>
+                  <hr class="dropdown-divider">
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="Nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="Contactanos.html">Contactanos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="ListaVacantes.html">Vacantes</a>
-                </li>
+                <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
               </ul>
-              <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Buscar</button>
-              </form>
-              <ul class="navbar-nav ms-3">
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Cuenta
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="InicioSesion.html">Iniciar Sesión</a></li>
-                    <li><a class="dropdown-item" href="Registrarse.html">Registrarse</a></li>
-                    <li><a class="dropdown-item" href="PerfilEstudiante.html">Perfil Estudiante</a></li>
-                    <li><a class="dropdown-item" href="PerfilEmpresa.html">Perfil Empresa</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
-  <!-- Contenido -->
-  <div class="container my-5">
-    <h2 class="text-center">¿Quiénes Somos?</h2>
-    <p class="mt-4">
-      Somos un grupo de desarrolladores apasionados por brindar soluciones tecnológicas a problemas cotidianos. Nuestra misión es facilitar el proceso de estadías para estudiantes y conectar a empresas con talento joven.
-    </p>
-    <h3 class="mt-5">Propósito de la Página</h3>
-    <p>
-      Esta plataforma tiene como objetivo centralizar y simplificar la búsqueda, aplicación y gestión de vacantes para estudiantes en estadías. Además, permite a las empresas publicar oportunidades y gestionar postulaciones de forma eficiente.
-    </p>
-    <h3 class="mt-5">Desarrollo del Proyecto</h3>
-    <p>
-      Este sitio web fue diseñado con tecnologías modernas como HTML, CSS, Bootstrap, y bases de datos SQL, asegurando funcionalidad y usabilidad tanto para estudiantes como para empresas.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Descripcion -->
+  <div class="container mt-4">
+    <p class="lead text-center">
+      Bienvenidos a <strong>SEEKERUTM</strong>, una solución diseñada para conectar a estudiantes con empresas de manera
+      eficiente.
+      Nuestro objetivo es simplificar el proceso de búsqueda e inscripción en estadías, permitiendo a los usuarios
+      encontrar oportunidades que se alineen
+      con sus intereses y objetivos profesionales. ¡Comienza tu camino hacia el éxito hoy mismo!
     </p>
   </div>
 
-  <!-- Footer -->
+  <!-- Contenido -->
+  <div class="container my-5">
+    <h2 id="Nosotros" class="text-center">¿Quiénes Somos?</h2>
+    <p class="mt-4">
+      Somos un grupo de desarrolladores apasionados por brindar soluciones tecnológicas a problemas cotidianos. Nuestra
+      misión es facilitar el proceso de estadías para estudiantes y conectar a empresas con talento joven.
+    </p>
+    <h3 class="mt-5">Propósito de la Página</h3>
+    <p>
+      Esta plataforma tiene como objetivo centralizar y simplificar la búsqueda, aplicación y gestión de vacantes para
+      estudiantes en estadías. Además, permite a las empresas publicar oportunidades y gestionar postulaciones de forma
+      eficiente.
+    </p>
+    <h3 class="mt-5">Desarrollo del Proyecto</h3>
+    <p>
+      Este sitio web fue diseñado con tecnologías modernas como HTML, CSS, Bootstrap, y bases de datos SQL, asegurando
+      funcionalidad y usabilidad tanto para estudiantes como para empresas.
+    </p>
+  </div>
+
+
   <footer class="text-center py-4">
     <div class="footer-links mb-3">
       <a href="#">Términos de Uso</a>
@@ -80,13 +101,22 @@
       <a href="#">Accesibilidad</a>
     </div>
     <div class="social-icons">
-      <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="img/Instagram.png" alt="Twitter"></a>
-      <a href="#"><img src="img/Tiktok.png" alt="Instagram"></a>
+      <a href="https://www.facebook.com/profile.php?id=61568639747937">
+        <img src="IMG/facebook.png" alt="Facebook">
+      </a>
+      <a href="https://www.instagram.com/seekerutm?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
+        <img src="IMG/Instagram.png" alt="Twitter">
+      </a>
+      <a href="#">
+        <img src="IMG/Tiktok.png" alt="Instagram">
+      </a>
     </div>
-    <p>&copy; 2024 SEEKERUTM. Todos los derechos reservados.</p>
+    <p>&copy; 2024 Plataforma Estadías. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
+  <script src="./JS/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
