--- a/PerfilEmpresa.html
+++ b/PerfilEmpresa.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfil Empresa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./CSS/bootstrap.min.css">
+  <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
+
 <body>
 
   <!-- Header -->
@@ -16,7 +18,8 @@
         <a class="navbar-brand" href="#">
           <img src="img/SEEKUTM.png" alt="Logo" class="header-logo">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -40,7 +43,8 @@
           </form>
           <ul class="navbar-nav ms-3">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Cuenta
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -48,7 +52,9 @@
                 <li><a class="dropdown-item" href="Registrarse.html">Registrarse</a></li>
                 <li><a class="dropdown-item" href="PerfilEstudiante.html">Perfil Estudiante</a></li>
                 <li><a class="dropdown-item" href="PerfilEmpresa.html">Perfil Empresa</a></li>
-                <li><hr class="dropdown-divider"></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
                 <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
               </ul>
             </li>
@@ -89,6 +95,7 @@
     <p>&copy; 2024 Plataforma Estadías. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./JS/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
