--- a/Vacantes.html
+++ b/Vacantes.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abrir Vacante</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/bootstrap.min.css">
 </head>
+
 <body>
 
   <div class="container my-5">
     <h2 class="text-center">Abrir Vacante</h2>
-    <form action="create_vacancy.php" method="POST">
+    <form action="./PHP/create_vacancy.php" method="POST">
       <!-- Título de la vacante -->
       <div class="mb-3">
         <label for="titulo" class="form-label">Título de la Vacante</label>
@@ -57,6 +59,7 @@
     </form>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./JS/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
