--- a/vacantesE.html
+++ b/vacantesE.html
@@ -1,44 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lista de Vacantes</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/CSS/Styles.css">
+  <title>Mis Vacantes</title>
+
+  <link rel="stylesheet" href="./CSS/bootstrap.min.css">
+  <link rel="stylesheet" href="./CSS/Styles.css">
+
 </head>
+
 <body>
-  
-<!--M: Modifique el codigo para añadir el sistema de filtros, y funciona exitosamente-->
 
-   <!-- Contenedor Principal -->
+  <?php include 'navare.html';?>
+
+  <!-- Contenedor Principal -->
   <div class="container my-4">
-    <!-- Filtros -->
-    <div class="col-12 mb-3" class="container">
-      <h1>Busqueda de Vacantes</h1>
-      <div class="filters">
-          <h3>Filtros</h3>
-          <label for="empresaFilter" class="form-label">Empresa:</label>
-          <select id="empresaFilter"></select>
-
-          <label for="localidadFilter" class="form-label" >Localidad:</label>
-          <select id="localidadFilter"></select>
-
-          <label for="sectorFilter" class="form-label" >Sector:</label>
-          <select id="sectorFilter"></select>
-          
-          <label for="programaFilter" class="form-label" >Programa:</label>
-          <select id="programaFilter"></select>
-
-          <button id="applyFilters">Aplicar Filtros</button>
-      </div>
-    </div>
 
     <!-- División principal -->
     <div class="row">
       <!-- Lista de Vacantes -->
       <div class="col-md-6">
-        <h3>Vacantes Disponibles</h3>
+        <h3>Mis V</h3>
         <div id="vacantesList" class="list-group" style="max-height: 500px; overflow-y: auto;">
           <!-- Vacantes serán cargadas dinámicamente -->
         </div>
@@ -84,8 +69,11 @@
   </div>
 
 
+  <?php include 'footer.html'?>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/JS/vacantes.js"></script>
+
+  <script src="/JS/bootstrap.bundle.min.js"></script>
+  <script src="/JS/obtenerDatosVaca.js"></script>
 </body>
+
 </html>
